--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             }
             showText() {
                 const cheerUpText = document.createElement('div');
-                cheerUpText.textContent = "Good Morning! Khaner Cheer up!";
+                cheerUpText.textContent = "You did a great job Khaner You are the best!";
                 cheerUpText.classList.add('cheerup', 'visible');
                 document.body.appendChild(cheerUpText);
             }
